@@ -2,11 +2,9 @@
     xmlns:metal="http://xml.zope.org/namespaces/metal"
     xmlns:tal="http://xml.zope.org/namespaces/tal"
     tal:define="settings view/settings;
-                active settings/enabled_bool;
                 type settings/type_choice;
                 title settings/title_textfield;
-                message settings/message_textfield"
-    tal:condition="active">
+                message settings/message_textfield">
     <dl class="" tal:attributes="class string: portalMessage ${type}">
         <dt tal:content= "title">Attention</dt>
         <dd tal:content= "structure message">This is a sample Message</dd>
