@@ -1,8 +1,14 @@
+from ftw.builder import Builder
+from ftw.builder import create
 from ftw.globalstatusmessage.testing import STATUSMESSAGE_FUNCTIONAL
 from ftw.testbrowser import browser
 from ftw.testbrowser import browsing
+from plone.app.layout.navigation.interfaces import INavigationRoot
 from plone.app.testing import SITE_OWNER_NAME
+from plone.app.testing import TEST_USER_ID
+from plone.app.testing import setRoles
 from unittest2 import TestCase
+import transaction
 
 
 def statusmessage():
@@ -16,6 +22,10 @@ def statusmessage():
 
 class TestConfiguringStatusMessage(TestCase):
     layer = STATUSMESSAGE_FUNCTIONAL
+
+    def setUp(self):
+        self.portal = self.layer['portal']
+        setRoles(self.portal, TEST_USER_ID, ['Manager'])
 
     @browsing
     def test_no_viewlet_by_default(self, browser):
@@ -71,3 +81,77 @@ class TestConfiguringStatusMessage(TestCase):
         browser.fill({'Active': False}).submit()
         self.assertFalse(statusmessage(),
                         'Expected message to be no longer visible.')
+
+    @browsing
+    def test_exclude_subsite(self, browser):
+        subsite = create(Builder('folder')
+                         .titled('The Subsite')
+                         .providing(INavigationRoot))
+
+        browser.login().visit(view='global_statusmessage_config')
+        browser.fill(
+            {'Active': True,
+             'Type': 'information',
+             'Title': 'Maintenance',
+             'Message': 'Scheduled Maintenance',
+             'Exclude sites': ['The Subsite']}).submit()
+
+
+        browser.visit(self.portal)
+        self.assertTrue(
+            statusmessage(),
+            'Status message should be visible on site root.')
+
+        page_on_site_root = create(Builder('page'))
+        browser.visit(page_on_site_root)
+        self.assertTrue(
+            statusmessage(),
+            'Status message should be visible on pages within site root.')
+
+        browser.visit(subsite)
+        self.assertFalse(
+            statusmessage(),
+            'Status message should not be visible on subsite.')
+
+        page_on_subsite = create(Builder('page').within(subsite))
+        browser.visit(page_on_subsite)
+        self.assertFalse(
+            statusmessage(),
+            'Status message should not be visible on pages within subsite.')
+
+    @browsing
+    def test_exclude_site_root(self, browser):
+        subsite = create(Builder('folder')
+                         .titled('The Subsite')
+                         .providing(INavigationRoot))
+
+        browser.login().visit(view='global_statusmessage_config')
+        browser.fill(
+            {'Active': True,
+             'Type': 'information',
+             'Title': 'Maintenance',
+             'Message': 'Scheduled Maintenance',
+             'Exclude sites': ['Plone site']}).submit()
+
+
+        browser.visit(self.portal)
+        self.assertFalse(
+            statusmessage(),
+            'Status message should not be visible on site root.')
+
+        page_on_site_root = create(Builder('page'))
+        browser.visit(page_on_site_root)
+        self.assertFalse(
+            statusmessage(),
+            'Status message should not be visible on pages within site root.')
+
+        browser.visit(subsite)
+        self.assertTrue(
+            statusmessage(),
+            'Status message should be visible on subsite.')
+
+        page_on_subsite = create(Builder('page').within(subsite))
+        browser.visit(page_on_subsite)
+        self.assertTrue(
+            statusmessage(),
+            'Status message should be visible on pages within subsite.')
