@@ -5,6 +5,9 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
+- Add option to exclude subsites from displaying the status message.
+  [jone]
+
 - Brazilian Portuguese and Spanish translations were updated.
   [hvelarde]
 
